<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:nestedScrollingEnabled="false"
    tools:context=".Activities.ItemInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-229dp"
        tools:layout_editor_absoluteY="-9dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/almendra_italic"
            android:gravity="start|center_vertical"
            android:text="@string/item_detail"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/itemImageView1"
            app:layout_constraintEnd_toStartOf="@+id/callOrder"
            app:layout_constraintStart_toEndOf="@+id/backPage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/callOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_phone_24"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/itemImageView1"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backPage"
            app:srcCompat="@drawable/pizza" />

        <TextView
            android:id="@+id/itemName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/aladin"
            android:text="@string/pizza"
            android:textColor="#333333"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemImageView1" />

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="239dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/FavoriteValue"
            android:isIndicator="true"
            app:layout_constraintStart_toStartOf="@+id/itemName1"
            app:layout_constraintTop_toBottomOf="@+id/itemName1" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/FavoriteValue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar1"
            app:layout_constraintStart_toEndOf="@+id/ratingBar1"
            app:layout_constraintTop_toTopOf="@+id/ratingBar1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/itemName1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemName1"
            app:srcCompat="@drawable/ic_baseline_favorite_order_24" />

        <TextView
            android:id="@+id/priceItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/aladin"
            android:text="@string/_199"
            android:textColor="#3F9785"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar1" />

        <TextView
            android:id="@+id/imageDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/aladin"
            android:lineSpacingExtra="2dp"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/priceItem"
            app:layout_constraintTop_toBottomOf="@+id/priceItem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDeals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/aladin"
            android:text="@string/find_best_deal"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="#002B16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/restaurant1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:fontFamily="@font/amita_bold"
            android:text="@string/restaurant"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDeals"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDescription"
            app:layout_constraintVertical_bias="0.441" />

        <TextView
            android:id="@+id/provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:fontFamily="@font/amita_bold"
            android:text="@string/provider"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDeals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDescription"
            app:layout_constraintVertical_bias="0.441" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>