<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="13dp"
            app:cardMaxElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#A7F197"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/aladin"
                        android:gravity="center"
                        android:text="@string/best_deal"
                        android:textColor="#004D40"
                        android:textSize="28sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/restaurantName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/aladin"
                            android:paddingStart="10dp"
                            android:paddingEnd="2dp"
                            android:text="@string/food_item"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/aladin"
                            android:text="@string/price"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/provider1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/aladin"
                        android:paddingStart="10dp"
                        android:paddingEnd="2dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/provider"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/placeOrder"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:background="@drawable/roundedcorners"
                        android:text="@string/place_order"
                        android:textColor="#212121"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/recyclerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="#F1E85C"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/aladin"
                        android:gravity="center"
                        android:text="@string/other_deals"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerDeal"
                        android:layout_width="match_parent"
                        android:layout_height="160dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/transparent"
                    android:backgroundTintMode="add"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/closeDeal"
                        style="@style/Widget.AppCompat.Button.Small"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/roundedcorners"
                        android:backgroundTint="#FF7043"
                        android:backgroundTintMode="add"
                        android:text="@string/close"
                        android:textColor="#263238"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>